2004-07-16  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b28

	* Change: Revert last change to album_permissions

	* Change: Fix PHP5 - they stopped using the old-style GET and POST
	  globals, and have switched to SuperGlobals only.  A couple session
	  and form functions needed adapting.

2004-07-16  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b27

	* Change: album_permissions - if $gallery->album is not set, but
	  set_albumName is, load it.

2004-07-16 Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b26


        * Change: Adapted contrib/phpBB2/modules.php to fit with phpBB2 2.0.9

        * Fix: added missing ; after a &quot in setup/configdata

	* Fix: change $noHeader to sendHeader in lib/lang.php and init with true instead false.
               Caught by Joerg Holzapfel

	* Change: Switch to superglobals in lib/lang.php

	* New: Added parameter for groups and fields in configwizard, 
	       that adds a little red start to notify user a required field.

2004-07-15  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b25

	* Change: We no longer use the 'donation' option with Shutterfly,
	  since we have an official affiliate agreement with them, now.
	  - Remove the 'donation' option from the config wizard
	  - Remove the 'donation' option from the album properties
	  - Rev the album version and remove the donation flag
	  - Fix setup text about donations/shutterfly

	* Change: Minor text tweak for upgrade album text in albums.php

	* Change: Fix unset variable error in print code.

2004-07-14  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b24

	* Change: Don't try and create clickable dimensions on albums.

2004-07-14  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b23

	* Change: Add a couple missing parens

2004-07-14  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b22

	* Change: Standardize on getRequestVar instead of Get/Post/Cookie

	* Change: $_SERVER is a trusted source.. no need to sanitize.
