@@ -876,12 +876,11 @@ function processFile($file, $tag, $name, $setCaption="") {
 			// add the extra fields
 			$myExtraFields = array();
 			foreach ($gallery->album->getExtraFields() as $field) {
-				global $HTTP_POST_VARS;
 				//$fieldname = "extrafield_$field";
 				//echo "Looking for extra field $fieldname\n";
 
 				// The way it should be done now
-				$value = $HTTP_POST_VARS[("extrafield.".$field)];
+				$value = $_POST[("extrafield.".$field)];
 				//echo "Got extra field $field = $value\n";
 				if ($value) {
 					if (get_magic_quotes_gpc()) {
@@ -892,7 +891,7 @@ function processFile($file, $tag, $name, $setCaption="") {
 				}
 
 				// Deprecated
-				$value = $HTTP_POST_VARS[("extrafield_".$field)];
+				$value = $_POST[("extrafield_".$field)];
 				//echo "Got extra field $field = $value\n";
 				if ($value) {
 					if (get_magic_quotes_gpc()) {
