@@ -24,10 +24,10 @@
 // Hack prevention.
 $sensitiveList = array("gallery", "GALLERY_EMBEDDED_INSIDE", "GALLERY_EMBEDDED_INSIDE_TYPE");
 foreach ($sensitiveList as $sensitive) {
-	if (!empty($HTTP_GET_VARS[$sensitive]) ||
-			!empty($HTTP_POST_VARS[$sensitive]) ||
-			!empty($HTTP_COOKIE_VARS[$sensitive]) ||
-			!empty($HTTP_POST_FILES[$sensitive])) {
+	if (!empty($_GET[$sensitive]) ||
+			!empty($_POST[$sensitive]) ||
+			!empty($_COOKIE[$sensitive]) ||
+			!empty($_POST[$sensitive])) {
 		print _("Security violation") ."\n";
 		exit;
 	}
@@ -60,8 +60,7 @@ if (empty($register_globals) ||
 }
 
 /*
- * If register_globals is off, then extract all HTTP variables into the global
- * namespace.  
+ * If register_globals is off, then extract all superglobals into the global namespace.  
  */
 if (!$gallery->register_globals) {
 
@@ -71,9 +70,7 @@ if (!$gallery->register_globals) {
      * to overwrite HTTP_POST_VARS when it extracts HTTP_GET_VARS
      */
     $scrubList = array('HTTP_GET_VARS', 'HTTP_POST_VARS', 'HTTP_COOKIE_VARS', 'HTTP_POST_FILES');
-    if (function_exists("version_compare") && version_compare(phpversion(), "4.1.0", ">=")) {
-	array_push($scrubList, "_GET", "_POST", "_COOKIE", "_FILES", "_REQUEST");
-    }
+    array_push($scrubList, "_GET", "_POST", "_COOKIE", "_FILES", "_REQUEST");
 
     foreach ($scrubList as $outer) {
 	foreach ($scrubList as $inner) {
@@ -85,22 +82,22 @@ if (!$gallery->register_globals) {
 	extract($_REQUEST);
     }
     else {
-        if (is_array($HTTP_GET_VARS)) {
-	    extract($HTTP_GET_VARS);
+        if (is_array($_GET)) {
+	    extract($_GET);
 	}
 
-	if (is_array($HTTP_POST_VARS)) {
-            extract($HTTP_POST_VARS);
+	if (is_array($_POST)) {
+            extract($_POST);
 	}
 
-	if (is_array($HTTP_COOKIE_VARS)) {
-            extract($HTTP_COOKIE_VARS);
+	if (is_array($_COOKIE)) {
+            extract($_COOKIE);
 	}
     }
 
 
-    if (is_array($HTTP_POST_FILES)) {
-	foreach($HTTP_POST_FILES as $key => $value) {
+    if (is_array($_POST)) {
+	foreach($_POST as $key => $value) {
 	    ${$key."_name"} = $value["name"];
 	    ${$key."_size"} = $value["size"];
 	    ${$key."_type"} = $value["type"];
@@ -174,7 +171,7 @@ if (isset($gallery->app->devMode) &&
  * Detect if we're running under SSL and adjust the URL accordingly.
  */
 if(isset($gallery->app)) {
-	if (isset($HTTP_SERVER_VARS["HTTPS"] ) && stristr($HTTP_SERVER_VARS["HTTPS"], "on")) {
+	if (isset($_SERVER["HTTPS"] ) && stristr($_SERVER["HTTPS"], "on")) {
 		$gallery->app->photoAlbumURL = 
 			eregi_replace("^http:", "https:", $gallery->app->photoAlbumURL);
 		$gallery->app->albumDirURL = 
