@@ -55,9 +55,9 @@ if (!isset($GALLERY_EMBEDDED_INSIDE) || $GALLERY_EMBEDDED_INSIDE_TYPE != "postnu
 
 /* emulate register_globals for sessions */
 if (!$gallery->register_globals) {
-	if (is_array($HTTP_SESSION_VARS) && !empty($HTTP_SESSION_VARS)) {
-		foreach($HTTP_SESSION_VARS as $key => $value) {
-			$$key =& $HTTP_SESSION_VARS[$key];
+	if (is_array($_SESSION) && !empty($_SESSION)) {
+		foreach($_SESSION as $key => $value) {
+			$$key =& $_SESSION[$key];
 		}
 	}
 	elseif (is_array($_SESSION) && !empty($_SESSION)) {
