@@ -1,3 +1,7 @@
+2004-07-17 Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b29
+
+	* Change: Switched more $HTTP Vars to superglobals. (not all)
+
 2004-07-16  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b28
 
 	* Change: Revert last change to album_permissions
@@ -12,7 +16,6 @@
 	  set_albumName is, load it.
 
 2004-07-16 Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b26
-
 
         * Change: Adapted contrib/phpBB2/modules.php to fit with phpBB2 2.0.9
 
